# explode

./: .gitignore  CMakeLists.txt  README.md  cie_xyz.h  clerror.h  main.cpp  noise.cl  render.cl  scene.cpp  scene.h  simulate.cl  simulation.cpp  simulation.h  util.cpp  util.h  writeup.lyx
data/: floor.txt  many.txt  mortar.txt  multi.txt  scene01.txt  simple.txt  small.txt
lib/vecmath/include/: Vector3f.h
output/: clean.sh  join.sh  mkvideo.sh
scenes/: cap.txt  multi.txt  scene01.txt  simple.txt  small.txt  tube.txt  wall.txt
src/: CMakeLists.txt  clerror.h  main.cpp  scene.cpp  simulate.cl  simulation.cpp  util.cpp  util.h
vecmath/include/: vecmath.h
videos/: inputs.txt  join.sh
writeup/: refs.bib  writeup.lyx
